# experiment-with-Django

./: LICENSE  main.py  pyproject.toml
backend/app/author/: apps.py  models.py  serializer.py  urls.py  views.py
backend/app/author/migrations/: 0001_initial.py
backend/app/genre/: apps.py  models.py  serializer.py  urls.py  views.py
backend/app/genre/migrations/: 0001_initial.py
backend/app/publisher/: apps.py  models.py  serializer.py  urls.py  views.py
backend/app/publisher/migrations/: 0001_initial.py
backend/app/tag/: apps.py  models.py  serializer.py  urls.py  views.py
backend/app/tag/migrations/: 0001_initial.py
backend/app/title/: apps.py  models.py  serializer.py  urls.py  views.py
backend/app/title/migrations/: 0001_initial.py
backend/common/: base_api_view.py
backend/config/: settings.py  urls.py
